--- a/index.qmd
+++ b/index.qmd
@@ -1,41 +1,12 @@
 ---
-title: "Welcome"
+title: "Haven Hold the Phone"
+subtitle: "_for the WSSD community_"
 ---
 
-## Mission Statement
+Haven Hold The Phone is a supportive and inclusive community within the [Wallingford-Swarthmore School District](https://wssd.org/) where families can access reliable information and engage in open discussions about the impact of smartphones and social media on children. 
 
-Our mission is to establish an inclusive, supportive and non-judgmental forum within our Wallingford-Swarthmore School District community where parents can learn about and discuss the impact of smartphones and social media on our children. 
+Families have the option to join neighbors in a pledge to delay providing a smartphone to their children until high school and social media use until they turn 16.
 
-Every family parents differently, but the goal of the group is to support its members in making fully informed and intentional choices about our children's tech use. 
+## Recent News & Updates
 
-## Objectives
-
-### Community Learning
-
-We believe everyone should know the benefits and harms of introducing smartphones and social media exposure to our children.  This group, therefore, will seek to identify and make available credible sources for the purpose of assisting parents to find answers to questions they may be afraid to ask. 
-
-  We will explore ways to engage the group in discussions on relevant topics including the latest research and options for parents struggling with how to approach balanced tech use, book clubs for group participation, and identify possible experts to come speak to our community.  
-
-### Fostering Communication
-
-We want to talk to neighbors who are facing the same questions with their kids and hear from parents who have already been through it with older children.
-
-### Empowering Families
-
-Families must be able to make their own decisions about tech and kids, but community norms and fear of socially isolating our kids can make these decisions difficult to navigate. So, to better support families struggling to navigate parenting in this digital era, we want to establish a place for engagement and informed discourse, so families no longer feel forced into any of these important decisions. 
-  
-  Additionally, given the success seen by similar movements like “Wait Until 8th", we will be implementing a local community pledge where families can find community support and make a shared commitment to delay smartphones (until high school) and social media (until 16 years old) for one or more of their children. The goal of our local pledge is to create a community connection and empower families to feel they will not be alone if they want to prolong a smart-phone free childhood for their child. 
-
-### Advocating for change
-
-We will research and explore opportunities to partner with those advocating for school policies that support our shared ambition of responsible and balanced technology use in school.
-
-  
-<!-- We are exploring a parent pact based on the book [The Anxious Generation](https://www.anxiousgeneration.com/book) by [Jonathan Haidt](https://jonathanhaidt.com/anxious-generation/) and his 4 new norms: -->
-
-<!-- 1) No smartphones before high school -->
-<!-- 2) No social media before age 16 -->
-<!-- 3) Phone-free schools -->
-<!-- 4) More independence, free play, and responsibility in the real world. -->
-
-<!-- If you aren't sure or your kids already have a smartphone, please join the [Facebook group](https://www.facebook.com/groups/915060343634375) anyway 🙂 -->
+We're holding an art contest for middle and high schoolers to design our logo! 
