--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,8 @@ Haven Hold The Phone is a supportive and inclusive community within the [Walling
 
 Families have the option to join neighbors in a pledge to delay providing a smartphone to their children until high school and social media use until they turn 16.
 
+📣 Want to be added to the mailing list while we're building out this site? Please fill out this [Google Form](https://docs.google.com/forms/d/16ekQFgzelk4_gcQJj6JwBiX60Y5f7QFKwfqLNNplaeY/viewform?edit_requested=true&fbclid=IwZXh0bgNhZW0CMTEAAR1ql_O4y_mMcb70t5-N8nKda4iKg472XgQ7Wr2_RM7-Q6ZN0ajI1R0SY28_aem_AfhidcwgeohTlBkdvD05L_QG3ZHxZRbk5fNbwMruGRNoC62YywZ6iuz0T06yLgGKqBm23BW54BLy7r6uqudOlJCa) to stay updated! 📣
+
 ## Recent News & Updates
 
 We're holding an art contest for middle and high schoolers to design our logo! 
