Add art contest flyer

--- a/index.qmd
+++ b/index.qmd
@@ -12,3 +12,5 @@ Families have the option to join neighbors in a pledge to delay providing a smar
 ## Recent News & Updates
 
 We're holding an art contest for middle and high schoolers to design our logo! 
+
+![](media/havenholdthephone_artcontest.png)
