--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ subtitle: "_for the WSSD community_"
 
 Haven Hold The Phone is a supportive and inclusive community within the [Wallingford-Swarthmore School District](https://wssd.org/) where families can access reliable information and engage in open discussions about the impact of smartphones and social media on children. 
 
-Families have the option to join neighbors in a pledge to delay providing a smartphone to their children until high school and social media use until they turn 16.
+Families have the option to join neighbors in a pledge. More information coming soon in the coming weeks. We are working on organizing the group a bit more. Stay tuned for opportunities to lead and/or join special committees like advocacy, education, outreach, etc. Please join our [mailing list]((https://docs.google.com/forms/d/16ekQFgzelk4_gcQJj6JwBiX60Y5f7QFKwfqLNNplaeY/viewform?edit_requested=true&fbclid=IwZXh0bgNhZW0CMTEAAR1ql_O4y_mMcb70t5-N8nKda4iKg472XgQ7Wr2_RM7-Q6ZN0ajI1R0SY28_aem_AfhidcwgeohTlBkdvD05L_QG3ZHxZRbk5fNbwMruGRNoC62YywZ6iuz0T06yLgGKqBm23BW54BLy7r6uqudOlJCa)) if you wish to be involved or would like to lead/join these special committees.
 
 📣 Want to be added to the mailing list while we're building out this site? Please fill out this [Google Form](https://docs.google.com/forms/d/16ekQFgzelk4_gcQJj6JwBiX60Y5f7QFKwfqLNNplaeY/viewform?edit_requested=true&fbclid=IwZXh0bgNhZW0CMTEAAR1ql_O4y_mMcb70t5-N8nKda4iKg472XgQ7Wr2_RM7-Q6ZN0ajI1R0SY28_aem_AfhidcwgeohTlBkdvD05L_QG3ZHxZRbk5fNbwMruGRNoC62YywZ6iuz0T06yLgGKqBm23BW54BLy7r6uqudOlJCa) to stay updated! 📣
 
